--- a/client/src/views/parent/style/main.css
+++ b/client/src/views/parent/style/main.css
@@ -10,7 +10,7 @@
 :root {
 	--main-color: #065a82;
 	--text-color: #232323;
-	--secondary-color: #0797b0;
+	--secondary-color: orange;
 }
 
 .App {
@@ -68,7 +68,7 @@ main {
 	flex-direction: column;
 	justify-content: space-between;
 	cursor: pointer;
-	height: 350px;
+	height: 400px;
 	flex-basis: 30%;
 	padding: 10px;
 	border: 4px solid #fff;
